Updated info for jobs, added scrolling on jobs page

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -228,6 +228,12 @@ a {
 .hidden {
 	display:none;
 }
+.hideScrollbar {
+	overflow-y:hidden;
+}
+.showScrollbar {
+	overflow-y:visible;
+}
 .fullPage {
 	position:absolute;
 	height:100%;
