--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -251,10 +251,10 @@ a {
 	width:100%;
 }
 .black_out {
-	-webkit-box-shadow:0px 0px 15px 15px rgba(0, 0, 0, 0.65);
-	-moz-box-shadow:0px 0px 15px 15px rgba(0, 0, 0, 0.65);
-	-o-box-shadow:0px 0px 15px 15px rgba(0, 0, 0, 0.65);
-	box-shadow:0px 0px 15px 15px rgba(0, 0, 0, 0.65);
+	-webkit-box-shadow:0px 0px 40px 25px rgba(0, 0, 0, 0.65);
+	-moz-box-shadow:0px 0px 40px 25px rgba(0, 0, 0, 0.65);
+	-o-box-shadow:0px 0px 40px 25px rgba(0, 0, 0, 0.65);
+	box-shadow:0px 0px 40px 25px rgba(0, 0, 0, 0.65);
 	background-color:rgba(0, 0, 0, 0.65);;
 }
 
@@ -523,9 +523,10 @@ a {
 
 #aboutMeDescription {
 	margin:auto auto;
-	padding:10px;
+	padding:2.5px 30px;
 	width:80%;
 	text-align:center;
+	border-radius:20px;
 }
 
 /* -------------------- ---------------------- -------------------- */
