--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -349,16 +349,13 @@ a {
 	width:20px;
 	border:2px solid white;
 	border-radius:12px;
-	-webkit-transition:background-color 1.5s;
-	transition:background-color 1.5s;
 }
 .notActive {
 	background-color:white;
-	height:24px;
-	width:24px;
+	height:20px;
+	width:20px;
+	border:2px solid black;
 	border-radius:12px;
-	-webkit-transition:background-color 1.5s;
-	transition:background-color 1.5s;
 }
 
 /* -------------------- -------------------- -------------------- */
@@ -378,6 +375,7 @@ a {
 }
 #page1, #page2, #page3 {
 	height:100%;
+	background-size:cover;
 }
 #page4 {
 	background-size:cover;
