--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -90,6 +90,15 @@ CONTACT INFO: wachterfreddy@gmail.com
 	font-size:35px;
 	color:rgb(225,225,224);
 }
+.icon-video:before {
+	position:relative;
+	margin-left:8px;
+	font-family:FontAwesome;
+	content: "\f04b";
+	font-style:normal;
+	font-size:30px;
+	color:rgb(225,225,224);
+}
 .icon-facebook:before {
 	position:relative;
 	margin-left:8px;
